--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -194,6 +194,35 @@ body {
     font-weight: 500;
     color: #333;
 }
+.category-books-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin-top: 10px;
+    gap: 4em;
+}
+
+.category-book-item {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 120px;
+}
+
+.category-book-cover {
+    width: 150px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.category-book-title {
+    font-size: 16px;
+    color: #333;
+    margin: 0;
+    max-width: 95%;
+}
 
 
 /* Contenedor principal */
