--- a/App/templates/books_by_genre.html
+++ b/App/templates/books_by_genre.html
@@ -9,17 +9,18 @@
   {% endif %}
 </h1>
 
-<div class="books-list">
+<div class="separator"></div>
+
+<div class="category-books-list">
   {% for book in books %}
-    <div class="book-item">
-      <img src="{{ book.cover_image.url }}" alt="{{ book.title }}">
-      <h3>{{ book.title }}</h3>
-      <p>{{ book.description }}</p>
-      <p><strong>Precio:</strong> ${{ book.price }}</p>
+    <div class="category-book-item">
+      <img src="{{ book.cover_image.url }}" alt="{{ book.title }}" class="category-book-cover">
+      <h3 class="category-book-title">{{ book.title }}</h3>
     </div>
   {% empty %}
     <p>No hay libros en esta categoría.</p>
   {% endfor %}
 </div>
+
 
 {% endblock %}
