arreglos de rutas

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -57,7 +57,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="">
+                    <a href="{% url 'userprofile' %}">
                         <img src="{% static 'img/user.png' %}" alt="Usuario" class="userlogo">
                     </a>
                   </li>
