--- a/App/templates/login/signup.html
+++ b/App/templates/login/signup.html
@@ -46,7 +46,7 @@
                 {% endif %}
                 <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg">Registrar</button>
             </form>
-            <p class="mt-4 text-center">¿Ya tienes cuenta? <a href="{% url 'logins' %}" class="text-blue-500">Inicia sesión aquí</a></p>
+            <p class="mt-4 text-center">¿Ya tienes cuenta? <a href="{% url 'signin' %}" class="text-blue-500">Inicia sesión aquí</a></p>
         </div>
     </div>
 {% endblock %}
