--- a/App/templates/carrito/carrito.html
+++ b/App/templates/carrito/carrito.html
@@ -1,56 +1,31 @@
-{% extends 'index.html' %}
+{% extends "base.html" %}
 
-{% load static %}
 {% block content %}
-    <div class="container">
-        <h1 class="my-4">Carrito de Compras</h1>
-
-        {% if carrito_items %}
-            <div class="row">
-                <div class="col-12">
-                    <ul class="list-group">
-                        {% for item in carrito_items %}
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <h5>{{ item.book.title }}</h5>
-                                        <p>{{ item.book.description }}</p>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p>Cantidad: {{ item.quantity }}</p>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p>Precio: ${{ item.book.price }}</p>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p>Total: ${{ item.quantity * item.book.price }}</p>
-                                    </div>
-                                </div>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row mt-4">
-                <div class="col-12">
-                    <h3>Total: ${{ total_amount }}</h3>
-                </div>
-            </div>
-
-            <div class="row mt-4">
-                <div class="col-12">
-                    <a href="{{ payment_url }}" target="_blank">
-                        <button class="btn btn-primary">Pagar con Mercado Pago</button>
-                    </a>
-                </div>
-            </div>
-        {% else %}
-            <div class="row">
-                <div class="col-12">
-                    <p>{{ message }}</p>
-                </div>
-            </div>
-        {% endif %}
-    </div>
+<h1>Tu carrito</h1>
+{% if carrito_items %}
+    <table>
+        <thead>
+            <tr>
+                <th>Libro</th>
+                <th>Precio</th>
+                <th>Cantidad</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in carrito_items %}
+                <tr>
+                    <td>{{ item.title }}</td>
+                    <td>${{ item.price }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>${{ item.total }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <h3>Total: ${{ total_amount }}</h3>
+{% else %}
+    <p>Tu carrito está vacío.</p>
+{% endif %}
+<a href="{% url 'home' %}">Seguir comprando</a>
 {% endblock %}
