--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -150,8 +150,8 @@
                 <h3 class="home-book-title">{{ book.title }}</h3>
                 
                 <!-- Formulario para agregar al carrito -->
-                {% if book.id %}
-                  <form action="{% url 'add_to_cart' book.id %}" method="post">
+                {% if book.book_id %}
+                  <form action="{% url 'add_to_cart' book.book_id %}" method="post">
                     {% csrf_token %}
                     <button type="submit">Agregar al carrito</button>
                   </form>
