--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -535,3 +535,96 @@ form input:focus, form textarea:focus {
     padding-top: 10px;
 }
 
+
+
+/* carrito */
+.page-container {
+    font-family: 'Arial', sans-serif;
+    background-color: #f9f9f9;
+    color: #333;
+    margin: 0;
+    padding: 0;
+}
+.cart-title, .cart-total {
+    text-align: center;
+    color: #2c3e50;
+}
+.cart-table {
+    width: 80%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
+.cart-table thead {
+    background-color: #3498db;
+    color: #fff;
+}
+.cart-table thead th {
+    padding: 12px;
+    text-align: left;
+}
+
+.cart-table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.cart-table tbody tr:hover {
+    background-color: #dff0fc;
+}
+
+.cart-table tbody td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.cart-table tbody td img {
+    border-radius: 4px;
+    display: block;
+    margin: 0 auto;
+}
+
+/* Botones y enlaces */
+.cart-link {
+    text-decoration: none;
+    color: #3498db;
+    display: block;
+    text-align: center;
+    margin: 20px auto;
+    font-weight: bold;
+}
+
+.cart-link:hover {
+    color: #1d78c1;
+}
+
+.cart-button {
+    background-color: #2ecc71;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    display: block;
+    margin: 0 auto;
+}
+
+.cart-button:hover {
+    background-color: #27ae60;
+}
+/* Contenedor de pago */
+.row {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.col-12 {
+    text-align: center;
+}
+
