--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -25,11 +25,13 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
+                  <ul class="nav">
                     {% if user.is_superuser %}
-                    <a class="nav-link" href="{% url 'add' %}">Añadir</a>
-                  </li>
-                  {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'add' %}">Añadir</a>
+                        </li>
+                    {% endif %}
+                </ul>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="{% url 'visualize' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Productos
@@ -145,27 +147,30 @@
           <!-- Last five books -->
           <div class="home-books-list">
             {% for book in books %}
-              <div class="home-book-item">
-                <img src="{{ book.cover_image.url }}" alt="{{ book.title }}" class="home-book-cover">
-                <h3 class="home-book-title">{{ book.title }}</h3>
-                
-                <!-- Formulario para agregar al carrito -->
-                {% if book.book_id %}
-                  <form action="{% url 'add_to_cart' book.book_id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit">Agregar al carrito</button>
-                  </form>
-                {% else %}
-                  <p>Error: Este libro no tiene un ID válido.</p>
-                {% endif %}
-                
-              </div>
+                <div class="home-book-item">
+                    <!-- Imagen de la portada -->
+                    <img src="{{ book.cover_image.url }}" alt="{{ book.title }}" class="home-book-cover">
+        
+                    <!-- Título del libro -->
+                    <h3 class="home-book-title">{{ book.title }}</h3>
+        
+                    <!-- Formulario para agregar al carrito -->
+                    {% if book.book_id %}
+                        <form action="{% url 'add_to_cart' book.book_id %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit">Agregar al carrito</button>
+                        </form>
+                        <!-- Enlace para modificar el libro -->
+                        <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+                    {% else %}
+                        <p>Error: Este libro no tiene un ID válido.</p>
+                    {% endif %}
+                </div>
             {% empty %}
-              <p>No hay libros disponibles.</p>
+                <p>No hay libros disponibles.</p>
             {% endfor %}
-          </div>
-          
-            
+        </div>
+        
         {% endblock %}
     </main>
 
