--- a/App/templates/pages/visualize.html
+++ b/App/templates/pages/visualize.html
@@ -8,7 +8,9 @@
             {% for book in books %}
                 <div class="col-md-4 col-sm-6 mb-4">
                     <div class="card">
-                        <img src="{{ book.cover_image }}" class="card-img-top" alt="Portada del libro">
+                        <a href="{% url 'book_detail' book.book_id %}">
+                            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="Portada del libro">
+                        </a>                        
                         <div class="card-body">
                             <h5 class="card-title">{{ book.title }}</h5>
                             <p class="card-text">{{ book.description }}</p>
