--- a/App/templates/error_page.html
+++ b/App/templates/error_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/error.css' %}">
 </head>
-<body>
-    <div class="container text-center mt-5">
-        <h1 class="display-4 text-danger">¡Ups!</h1>
-        <p class="lead">{{ message }}</p>
-        <a href="/" class="btn btn-primary mt-3">Volver al Inicio</a>
+<body class="erro">
+    <div class="error-container container text-center mt-5">
+        <h1 class="error-title display-4 text-danger">¡Ups!</h1>
+        <img src="{% static 'img/error.png' %}" class="error-image mt-3">
+        <p class="error-message lead mt-3">{{ message }}</p>
+        <a href="/" class="error-back-button btn btn-primary mt-4">Volver al Inicio</a>
     </div>
 </body>
 </html>
