--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -13,65 +13,68 @@
 </head>
 
 <body>
-    {% block header %}
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">
-                    <img src="{% static 'img/logo.png' %}" alt="Logo" class="logotipo">
-                </a>
+  {% block header %}
+  <header>
+      <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="{% url 'home' %}">
+                  <img src="{% static 'img/logo.png' %}" alt="Logo" class="logotipo">
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto">
-                  <ul class="nav">
-                    {% if user.is_superuser %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'add' %}">Añadir</a>
-                        </li>
-                    {% endif %}
-                </ul>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{% url 'visualize' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Productos
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=2 %}">Romance</a></li>
-                      <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=1 %}">Fantasía</a></li>
-                      <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=3 %}">Ciencia Ficción</a></li>
-                      <li><a class="dropdown-item" href="">Misterio</a></li>
-                      <li><a class="dropdown-item" href="">Literatura Juvenil</a></li>
-                      <li><a class="dropdown-item" href="">Historia</a></li>
-                      <li><a class="dropdown-item" href="">Literatura Infantil</a></li>
-                      <li><a class="dropdown-item" href="">Psicología</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#contact_btn">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'visualize' %}">Todos los productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#contact_btn">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="{% url 'carrito' %}" class="nav-link">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="{% url 'userprofile' %}">
-                        <img src="{% static 'img/user.png' %}" alt="Usuario" class="userlogo">
-                    </a>
-                  </li>
-                </ul>
+                  <ul class="navbar-nav ms-auto">
+                      <ul class="nav">
+                          {% if user.is_superuser %}
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{% url 'add' %}">Añadir</a>
+                              </li>
+                          {% endif %}
+                      </ul>
+                      <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="{% url 'visualize' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Productos
+                          </a>
+                          <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=2 %}">Romance</a></li>
+                              <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=1 %}">Fantasía</a></li>
+                              <li><a class="dropdown-item" href="{% url 'books_by_genre' genre_id=3 %}">Ciencia Ficción</a></li>
+                              <li><a class="dropdown-item" href="">Misterio</a></li>
+                              <li><a class="dropdown-item" href="">Literatura Juvenil</a></li>
+                              <li><a class="dropdown-item" href="">Historia</a></li>
+                              <li><a class="dropdown-item" href="">Literatura Infantil</a></li>
+                              <li><a class="dropdown-item" href="">Psicología</a></li>
+                          </ul>
+                      </li>
+                      {% if user.is_authenticated and not user.is_superuser %}
+                          <li class="nav-item">
+                              <a class="nav-link" href="#contact_btn">Nosotros</a>
+                          </li>
+                          <li class="nav-item">
+                              <a href="{% url 'carrito' %}" class="nav-link">
+                                  <i class="fas fa-shopping-cart"></i>
+                              </a>
+                          </li>
+                      {% endif %}
+                      <li class="nav-item">
+                          <a class="nav-link" href="{% url 'visualize' %}">Todos los productos</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#contact_btn">Contacto</a>
+                      </li>
+                      <li>
+                          <a href="{% url 'userprofile' %}">
+                              <img src="{% static 'img/user.png' %}" alt="Usuario" class="userlogo">
+                          </a>
+                      </li>
+                  </ul>
               </div>
-            </div>
-          </nav>            
-    </header>
-    {% endblock %}
+          </div>
+      </nav>
+  </header>
+  {% endblock %}
+  
     
     <!-- Main content -->
 
@@ -145,35 +148,34 @@
               <p>Psicología</p>
           </a>
         </div>
-
-
-          <!-- Last five books -->
-          <div class="home-books-list">
-            {% for book in books %}
-                <div class="home-book-item">
-                    <!-- Imagen de la portada -->
-                    <a href="{% url 'book_detail' book.book_id %}">
-                      <img src="{{ book.cover_image.url }}" class="card-img-top" alt="Portada del libro">
-                    </a>            
-                    <!-- Título del libro -->
-                    <h3 class="home-book-title">{{ book.title }}</h3>
-        
-                    <!-- Formulario para agregar al carrito -->
-                    {% if book.book_id %}
-                        <form action="{% url 'add_to_cart' book.book_id %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit">Agregar al carrito</button>
-                        </form>
-                        <!-- Enlace para modificar el libro -->
-                        <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
-                    {% else %}
-                        <p>Error: Este libro no tiene un ID válido.</p>
-                    {% endif %}
-                </div>
-            {% empty %}
-                <p>No hay libros disponibles.</p>
-            {% endfor %}
+        <!-- Last five books -->
+        <div class="home-books-list">
+          {% for book in books %}
+              <div class="home-book-item">
+                  <!-- Imagen de la portada -->
+                  <a href="{% url 'book_detail' book.book_id %}">
+                    <img src="{{ book.cover_image.url }}" class="card-img-top" alt="Portada del libro">
+                  </a>            
+                  <h3 class="home-book-title">{{ book.title }}</h3>
+                
+                  {% if user.is_superuser %}
+                      <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+                  {% else %}
+                      {% if book.book_id %}
+                          <form action="{% url 'add_to_cart' book.book_id %}" method="post">
+                              {% csrf_token %}
+                              <button type="submit">Agregar al carrito</button>
+                          </form>
+                      {% else %}
+                          <p>Error: Este libro no tiene un ID válido.</p>
+                      {% endif %}
+                  {% endif %}
+              </div>
+          {% empty %}
+              <p>No hay libros disponibles.</p>
+          {% endfor %}
         </div>
+
         
         {% endblock %}
     </main>
