--- a/App/templates/pages/book_detail.html
+++ b/App/templates/pages/book_detail.html
@@ -18,12 +18,23 @@
             <p><strong>Número de Páginas:</strong> {{ book.page_count }}</p>
             <p><strong>Género:</strong> {{ book.genre.name }}</p>
             
-            {% if user.is_authenticated and not user.is_superuser %}
-                <a href="{% url 'carrito' %}" class="btn btn-primary">Añadir al Carrito</a>
-                <a href="{% url 'home' %}" class="btn btn-secondary">Volver a la Lista</a>
-            {% elif user.is_superuser %}
-            <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+            {% if user.is_authenticated %}
+                {% if not user.is_superuser %}
+                    <form action="{% url 'add_to_cart' book.book_id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">Añadir al Carrito</button>
+                    </form>
+                {% else %}
+                    <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+                {% endif %}
+            {% else %}
+                <form action="{% url 'add_to_cart' book.book_id %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary">Añadir al Carrito</button>
+                </form>
             {% endif %}
+            
+            <a href="{% url 'home' %}" class="btn btn-secondary">Volver a la Lista</a>
         </div>
     </div>
 </div>
