--- a/App/templates/pages/book_detail.html
+++ b/App/templates/pages/book_detail.html
@@ -1,40 +1,65 @@
 {% extends 'index.html' %}
 
+{% load static %}
+
 {% block content %}
-<div class="container my-4">
-    <h1 class="mb-4">{{ book.title }}</h1>
-    <div class="row">
-        <div class="col-md-4">
-            <img src="{{ book.cover_image.url }}" alt="{{ book.title }}" class="img-fluid">
+<div class="book-detail-container">
+    <div class="cont-book">
+        <div class="book-content">
+            <div class="details-book-cover">
+                <img src="{{ book.cover_image.url }}" alt="{{ book.title }}" class="img-fluid">
+            </div>
+            <div class="title-details">
+                <h1 class="book-title">{{ book.title }}</h1>
+                <h2 class="book-author">{{ book.author.name }}</h2>
+            </div>
         </div>
-        <div class="col-md-8">
-            <p><strong>Descripción:</strong> {{ book.description }}</p>
-            <p><strong>Fecha de Publicación:</strong> {{ book.publication_date }}</p>
-            <p><strong>ISBN:</strong> {{ book.isbn }}</p>
-            <p><strong>Precio:</strong> ${{ book.price }}</p>
-            <p><strong>Stock Disponible:</strong> {{ book.stock }}</p>
-            <p><strong>Autor:</strong> {{ book.author.name }}</p>
-            <p><strong>Idioma:</strong> {{ book.language }}</p>
-            <p><strong>Número de Páginas:</strong> {{ book.page_count }}</p>
-            <p><strong>Género:</strong> {{ book.genre.name }}</p>
-            
+        
+    
+        <div class="buy-btn">
             {% if user.is_authenticated %}
-                {% if not user.is_superuser %}
-                    <form action="{% url 'add_to_cart' book.book_id %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-primary">Añadir al Carrito</button>
-                    </form>
-                {% else %}
-                    <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
-                {% endif %}
+            {% if not user.is_superuser %}
+                <form action="{% url 'add_to_cart' book.book_id %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn-carrito">Añadir al carrito</button>
+                </form>
+            {% else %}
+                <a class="nav-link" href="{% url 'modificar_book' book_id=book.book_id %}">Modificar</a>
+            {% endif %}
             {% else %}
                 <form action="{% url 'add_to_cart' book.book_id %}" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary">Añadir al Carrito</button>
+                    <button type="submit" class="btn-carrito">Añadir al carrito</button>
                 </form>
             {% endif %}
-            
-            <a href="{% url 'home' %}" class="btn btn-secondary">Volver a la Lista</a>
+        </div>
+    </div>
+    
+
+    <div class="book-extra-info">
+        <div class="book-info">
+            <div class="descrip-container">
+                <h3 class="titulo">Descripción</h3>
+                <p class="book-description">{{ book.description }}</p>
+                <div class="descrip-container">
+                    <h3 class="titulo">Género</h3>
+                    <p class="book-description">{{ book.genre }}</p>
+                </div>
+            </div>
+            <div class="details-container">
+                <div>
+                    <h3 class="titulo">Fecha de publicación</h3>
+                    <p class="text">{{ book.publication_date }}</p>
+                </div>
+                <div class="metadata">
+                    <h3 class="titulo">Idioma</h3>
+                    <p class="text">{{ book.language }}</p>
+                </div>
+                <div>
+                    <h3 class="titulo">Detalles</h3>
+                    <p class="text">{{ book.page_count }} páginas <br>ISBN: {{ book.isbn }}</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
