--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -706,6 +706,7 @@ form input:focus, form textarea:focus {
     align-items: center;
     justify-content: center; 
     align-content: center;
+    gap: 2em;
 }
 
 .img-fluid {
